menu service added to imprint and privacy-policy

--- a/src/app/data-protection/data-protection.component.html
+++ b/src/app/data-protection/data-protection.component.html
@@ -1,7 +1,7 @@
 
 <section>
     <app-main-navbar></app-main-navbar>
-    <div class="content fontQuicksand">
+    <div class="content fontQuicksand" (click)="closeTheMenu()">
         <h1 class="fontEckzar">{{ 'privacy-policy.title' | translate }}</h1><br>
 <h4>1. {{ 'privacy-policy.title01' | translate }}</h4><br>
 {{ 'privacy-policy.text01' | translate }}
