--- a/src/app/impressum/impressum.component.html
+++ b/src/app/impressum/impressum.component.html
@@ -1,6 +1,6 @@
 <section>
     <app-main-navbar></app-main-navbar>
-    <div class="content fontQuicksand">
+    <div class="content fontQuicksand" (click)="closeTheMenu()">
         <h1 class="fontEckzar">{{ 'imprint.title' | translate }}</h1>
 {{ 'imprint.law' | translate }}
 <br>
