--- a/src/app/main-content/main-content.component.scss
+++ b/src/app/main-content/main-content.component.scss
@@ -1,5 +1,5 @@
 .main_content{
-    //scroll-snap-type: y mandatory;
+    scroll-snap-type: y mandatory;
     height: 100vh; 
     overflow-x: hidden; 
     scroll-behavior: smooth;
