responsiveness for mobile debugged after testing on real devices

--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -271,7 +271,7 @@ app-navdots {
 @media(max-width: 380px) {
     .mobile_view_text {display: block;}
     .normal_view_text {display: none;}
-    .show_info_slider {right: 20%;}
+    .show_info_slider {right: 24%; bottom: -111px;}
 }
 
 @media (max-width: 360px) {
