--- a/src/app/main-content/competences/competences.component.scss
+++ b/src/app/main-content/competences/competences.component.scss
@@ -273,6 +273,8 @@ app-navdots {
     .content {padding-left: 16px; padding-right: 16px;}
     .description {width: 100%;}
     .further_skills {top: 48vh;}
+    .learning_sun {bottom: -385px;}
+    .learning_icon {bottom: -349px;}
 }
 
 @media(max-width: 370px) {
