personalized responsiveness for my own device samsung galasy a54

--- a/src/app/main-content/above-the-folder/above-the-folder.component.scss
+++ b/src/app/main-content/above-the-folder/above-the-folder.component.scss
@@ -316,3 +316,8 @@ app-navdots {
         height: 34px;}
     .btn {margin-top: 0;}
 }
+
+//*****Sasung Galaxy A54**************************************
+@media screen and (width: 384px) and (height: 755px) {
+    .my_foto {right: 23px;}
+}
