--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -273,3 +273,10 @@ app-navdots {
     .blue_sun {bottom: -26vh;}
     .orange_sun {right: -46%;}
 }
+
+//*****Sasung Galaxy A54**************************************
+@media screen and (width: 384px) and (height: 755px) {
+    .gearwheels {height: 93px; bottom: -72vh}
+    .blue_sun {height: 94px;}
+    .orange_sun {height: 80px;}
+}
