--- a/src/app/main-content/contact/formular/formular.component.scss
+++ b/src/app/main-content/contact/formular/formular.component.scss
@@ -144,6 +144,7 @@ label {
     .legal_information {font-size: 16px;}
 }
 
+
 //*****iPhoneSE**************************************
 @media screen and (width: 375px) and (height: 667px) {
     .formular {gap: 8px;}
@@ -153,7 +154,8 @@ label {
     .drop_line input {font-size: 16px; margin-top: -11px;}
 }
 
-//*****Nesthub**************************************
-@media screen and (width: 1024px) and (height: 600px) {
+//*****Sasung Galaxy A54**************************************
+@media screen and (width: 384px) and (height: 755px) {
+    .formular {gap: 8px;}
     
 }
