--- a/src/app/main-content/reviews/reviews.component.html
+++ b/src/app/main-content/reviews/reviews.component.html
@@ -3,7 +3,7 @@
 
     <div class="content fontQuicksand">
         <div class="references">
-            <h2 class="fontEckzar">Was andere über mich sagen:</h2>
+            <h2 class="fontEckzar">{{ 'reviews.h2' | translate }}</h2>
             <div class="boxes">
 
                 <div class="nr_one">
