--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -53,6 +53,7 @@ a {
 @media (max-width: 550px) {
     .links {justify-content: space-between;}
     .links {padding: 0 16px;}
+    .portfolio_footer {padding: 0 0 0 0;}
 }
 
 @media (max-width: 520px) {
