--- a/src/app/impressum/impressum.component.html
+++ b/src/app/impressum/impressum.component.html
@@ -25,7 +25,7 @@ barbora-lambeinova.de <br><br>
 <br>
 <p>{{ 'imprint.copyright' | translate }}</p>
 <br>
-<p>{{ 'imprint.privacy-policy' | translate }}<a href="data_protection"> {{ 'imprint.privacy-policy-link' | translate }}</a>.</p>
+<p>{{ 'imprint.privacy-policy' | translate }}<a routerLink="/data_protection"> {{ 'imprint.privacy-policy-link' | translate }}</a>.</p>
  <br>
 
     </div>
