--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -6,7 +6,7 @@
             © Barbora Lambeinova 2025
         </div>
         <div class="links oneThird">
-            <a href="impressum">Impressum</a>
+            <a routerLink="/impressum">{{ 'footer.imprint' | translate }}</a>
             <a href="https://www.linkedin.com/in/barbora-lambeinova-33706a35a/" target="_blank">LinkedIn</a>
             <a href="https://github.com/BaraDroid" target="_blank">Git Hub</a>
         </div>
