--- a/src/app/main-content/contact/formular/formular.component.scss
+++ b/src/app/main-content/contact/formular/formular.component.scss
@@ -32,7 +32,7 @@
 .checking {
     display: flex;
     align-items: center;
-    >img {top: 2px;}
+    >img {top: 2px; margin-right: 8px;}
     >span {
         >a {color:#f9af41;}
     }
