router outlet added in main-content.component for not loading the site again in imprint

--- a/src/app/impressum/impressum.component.html
+++ b/src/app/impressum/impressum.component.html
@@ -12,7 +12,7 @@ Marktplatz 12<br>
 86650 Wemding<br><br>
 
 E-Mail-{{ 'imprint.adress' | translate }}:<br>
-LambeinovabB "&#64;" seznam.cz<br><br>
+<a href="mailto:lambeinovab@seznam.cz">LambeinovabB et seznam . cz</a><br><br>
 
 {{ 'imprint.site' | translate }}:<br>
 barbora-lambeinova.de <br><br>
