--- a/src/app/impressum/impressum.component.scss
+++ b/src/app/impressum/impressum.component.scss
@@ -9,6 +9,7 @@ section {
 
 .content {
     min-height: calc(100vh - 173px);
+    width: 100%;
     max-width: 1440px;
     padding-left: 112px;
     padding-right: 112px;
