--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -5,4 +5,5 @@
 <app-work id="work"></app-work>
 <app-reviews id="references"></app-reviews>
 <app-contact id="contact"></app-contact>
+<router-outlet></router-outlet>
 </div>
