--- a/src/app/shared/main-navbar/main-navbar.component.html
+++ b/src/app/shared/main-navbar/main-navbar.component.html
@@ -32,8 +32,8 @@
 	</div>
 	<a href="#portfolio"><img class="personal_logo" src="./assets/logo/logo_white_nobg.png" alt="logo in white"></a>	
 	<div class="menu">
-			<img id="enIcon" src="./assets/languages/default_en.svg" *ngIf="germanText" (click)="changeToEnglish()" alt="EN icon">
-			<img id="deIcon" src="./assets/languages/default_de.svg" *ngIf="englishText" (click)="changeToGerman()" alt="DE icon">
+			<img (click)="changeToEnglish()" id="enIcon" src="./assets/languages/default_en.svg" *ngIf="germanText" alt="EN icon">
+			<img (click)="changeToGerman()" id="deIcon" src="./assets/languages/default_de.svg" *ngIf="englishText"  alt="DE icon">
 			<img id="burgerMenu" (click)="openMenuTab($event); $event.stopPropagation()" src="./assets/menu_icons/menu_default.svg" alt="burger menu icon">
 	</div>
 
