--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -54,6 +54,7 @@ h2 {
     left: 36vw;
     top: 42vh;
     width: 40vw;
+    max-width: 600px;
     background-color: #1D1D1D;
     border-radius: 4px;
     padding: 32px;
