--- a/src/app/main-content/contact/formular/formular.component.scss
+++ b/src/app/main-content/contact/formular/formular.component.scss
@@ -112,6 +112,30 @@ label {
     cursor: not-allowed;
   }
 
+  .confirm{
+    background-color: #f9af42;
+    padding: 24px;
+    border-radius: 4px;
+    border: 1px solid #F8F7E5;
+    color:#F8F7E5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+    align-self: center;
+    justify-self: center;
+    position: absolute;
+    z-index: 30;
+    >p {
+        text-align: center;
+        font-size: 16px;
+        font-weight: 700;
+        font-family: 'Quicksand';
+    }
+  }
+  
+
 @media(max-width: 1200px) {
     input[type=text] {padding: 16px 8px;}
 }
