apps height changed for 100dvh

--- a/src/app/main-content/main-content.component.scss
+++ b/src/app/main-content/main-content.component.scss
@@ -11,26 +11,32 @@
 
 app-above-the-folder {
     width: 100%;
+    height: 100dvh;
 }
 
 app-about-me {
     width: 100%;
+    height: 100dvh;
 }
 
 app-competences {
     width: 100%;
+    height: 100dvh;
 }
 
 app-work {
     width: 100%;
+    height: 100dvh;
 }
 
 app-reviews {
     width: 100%;
+    height: 100dvh;
 }
 
 app-contact {
     width: 100%;
+    height: 100dvh;
 }
 
 router-outlet {
