arrows in reviews added for better show, that this section is horizontal scrollable

--- a/src/app/main-content/reviews/reviews.component.html
+++ b/src/app/main-content/reviews/reviews.component.html
@@ -4,6 +4,9 @@
     <div class="content fontQuicksand">
         <div class="references">
             <h2 class="fontEckzar">{{ 'reviews.h2' | translate }}</h2>
+            <div class="moving_arrow" *ngIf="showArrows">
+                
+            </div>
             <div class="boxes">
 
                 <div class="nr_one">
