drop a line btn always over all other elements for handle possible malfunction of responsiveness

--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -11,7 +11,7 @@
                     <br>
                     <p class="vanishable">{{ 'about_me.text2' | translate }}</p>
                     <div class="interactive">
-                       <a href="#contact"><button class="btn fontQuicksand">Let´s Talk</button></a>
+                       <a href="#contact"><button class="btn fontQuicksand">Let's Talk</button></a>
                         <img class="jumping_icon"
                         (mouseover)="handleMouseOverForSlider()"
                         (mouseleave)="handleMouseLeaveForSlider()"
