--- a/src/app/impressum/impressum.component.html
+++ b/src/app/impressum/impressum.component.html
@@ -12,7 +12,7 @@ Marktplatz 12<br>
 86650 Wemding<br><br>
 
 E-Mail-{{ 'imprint.adress' | translate }}:<br>
-<a href="mailto:lambeinovab@seznam.cz">LambeinovabB et seznam . cz</a><br><br>
+<a href="mailto:lambeinovab@seznam.cz">&#108;&#97;&#109;&#98;&#101;&#105;<!-- >@. -->&#110;&#111;&#118;<!-- >@. -->&#97;&#98;&#64;<!-- >@. -->&#115;&#101;&#122;<!-- >@. -->&#110;&#97;&#109;&#46;&#99;&#122;</a><br><br>
 
 {{ 'imprint.site' | translate }}:<br>
 barbora-lambeinova.de <br><br>
