--- a/src/app/impressum/impressum.component.scss
+++ b/src/app/impressum/impressum.component.scss
@@ -22,7 +22,9 @@ app-main-navbar {
 
 a {
     text-decoration: none;
-    color: #1d1d1d;
+    color: #ff824e;
+    font-size: 18px;
+    font-weight: 700;
 }
 
 @media (max-width: 450px) {
