--- a/src/app/shared/common-navbar/common-navbar.component.html
+++ b/src/app/shared/common-navbar/common-navbar.component.html
@@ -8,15 +8,17 @@
     	
     <div class="menu">
         @if(whiteColor) {
-            <img id="defaultEnIcon" src="./assets/languages/default_en.svg" *ngIf="germanText" (click)="changeToEnglish()" alt="EN icon in white">
-            <img id="defaultDeIcon" src="./assets/languages/default_de.svg" *ngIf="englishText" (click)="changeToGerman()" alt="DE icon in white">
+            <img id="defaultEnIcon" src="./assets/languages/default_en.svg" *ngIf="languageService.germanText" (click)="changeToEnglish()" alt="EN icon in white">
+            <img id="defaultDeIcon" src="./assets/languages/default_de.svg" *ngIf="languageService.englishText" (click)="changeToGerman()" alt="DE icon in white">
             <img class="burger_menu" (click)="openMenuTab($event); $event.stopPropagation()" src="./assets/menu_icons/menu_default.svg" alt="burger menu icon in white">
-            
-        } @else {
+        }
+        <!-- die geschw.Klammer ist zu viel, war einfach in der nächsten Zeile
+        das folgende habe ich auskommentiert, dass ich mein language service ausprobieren kann -->
+        <!-- } @else {
             <img id="blackEnIcon" src="./assets/languages/black_en.svg" *ngIf="germanText" (click)="changeToEnglish()" alt="EN icon in black">
             <img id="blackDeIcon" src="./assets/languages/black_de.svg" *ngIf="englishText" (click)="changeToGerman()" alt="DE icon in black">
             <img class="burger_menu" (click)="openMenuTab($event); $event.stopPropagation()" src="./assets/menu_icons/menu_black.svg" alt="burger menu icon in black">
-        }
+        } -->
         
     </div>
     <div class="menu_tab fontQuicksand font_bold" [ngClass]="{ 'menu_open': menuOpen }" (click)="$event.stopPropagation()">
