language saved in local storage for better transfer between the sites sections

--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -1,6 +1,6 @@
 section {
     background-color: #F8F7E5;
-    height: 100vh;
+    height: 100dvh;
     width: 100%;
     scroll-snap-align: start;
     display: flex;
