horizontal scroll bar in reviews section changed for auto height

--- a/src/app/shared/main-navbar/main-navbar.component.scss
+++ b/src/app/shared/main-navbar/main-navbar.component.scss
@@ -139,7 +139,7 @@
 }
 
 @media (max-width: 700px) {
-    .menu {>img{height: 35px;}}
+    //.menu {>img{height: 35px;}}
     .icons {>svg{height: 27px;}}
     .navbar {padding-left: 16px; padding-right: 16px;}
 }
