--- a/src/app/main-content/reviews/reviews.component.scss
+++ b/src/app/main-content/reviews/reviews.component.scss
@@ -1,7 +1,7 @@
 section {
     background-color: #679AAC;
     scroll-snap-align: start;
-    height: 100vh;
+    height: 100dvh;
     width: 100%;
     scroll-snap-align: start;
     display: flex;
@@ -113,37 +113,38 @@ app-navdots {
 }
 
 @media (max-width: 988px) {
-    .boxes {
-        flex-direction: row; 
-        overflow-x: auto; 
-        scroll-snap-type: x mandatory;
-        width: 100%;
-    }
-    .nr_one, .nr_two, .nr_three {width: 100%; flex-shrink: 0;}
-    app-first-review {width: 100%; scroll-snap-align: center;}
-    app-second-review {width: 100%; scroll-snap-align: center;}
-    app-third-review {width: 100%; scroll-snap-align: center;}
-/* width */
-::-webkit-scrollbar {
-    width: 5px;
-  }
+    section {height: auto;}
+    // .boxes {
+    //     flex-direction: row; 
+    //     overflow-x: auto; 
+    //     scroll-snap-type: x mandatory;
+    //     width: 100%;
+    // }
+//     .nr_one, .nr_two, .nr_three {width: 100%; flex-shrink: 0;}
+//     app-first-review {width: 100%; scroll-snap-align: center;}
+//     app-second-review {width: 100%; scroll-snap-align: center;}
+//     app-third-review {width: 100%; scroll-snap-align: center;}
+// /* width */
+// ::-webkit-scrollbar {
+//     width: 5px;
+//   }
   
-  /* Track */
-  ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px #679AAC;
-    border-radius: 10px;
-  }
+//   /* Track */
+//   ::-webkit-scrollbar-track {
+//     box-shadow: inset 0 0 5px #679AAC;
+//     border-radius: 10px;
+//   }
    
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: #f8f7e5; 
-    border-radius: 10px;
-  }
+//   /* Handle */
+//   ::-webkit-scrollbar-thumb {
+//     background: #f8f7e5; 
+//     border-radius: 10px;
+//   }
   
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #ff834f;
-  }
+//   /* Handle on hover */
+//   ::-webkit-scrollbar-thumb:hover {
+//     background: #ff834f;
+//   }
 }
 
 @media (max-width: 1290px) {
