--- a/src/app/main-content/reviews/reviews.component.scss
+++ b/src/app/main-content/reviews/reviews.component.scss
@@ -46,6 +46,7 @@ app-common-navbar {
     justify-content: space-between;
     height: 100%;
     margin-top: 16px;
+    margin-bottom: 16px;
     gap: 40px;
     padding-right: 40px;
 }
@@ -115,37 +116,6 @@ app-navdots {
 @media (max-width: 988px) {
     section {height: auto;}
     .boxes {flex-direction: column; margin-bottom: 16px;}
-    // .boxes {
-    //     flex-direction: row; 
-    //     overflow-x: auto; 
-    //     scroll-snap-type: x mandatory;
-    //     width: 100%;
-    // }
-//     .nr_one, .nr_two, .nr_three {width: 100%; flex-shrink: 0;}
-//     app-first-review {width: 100%; scroll-snap-align: center;}
-//     app-second-review {width: 100%; scroll-snap-align: center;}
-//     app-third-review {width: 100%; scroll-snap-align: center;}
-// /* width */
-// ::-webkit-scrollbar {
-//     width: 5px;
-//   }
-  
-//   /* Track */
-//   ::-webkit-scrollbar-track {
-//     box-shadow: inset 0 0 5px #679AAC;
-//     border-radius: 10px;
-//   }
-   
-//   /* Handle */
-//   ::-webkit-scrollbar-thumb {
-//     background: #f8f7e5; 
-//     border-radius: 10px;
-//   }
-  
-//   /* Handle on hover */
-//   ::-webkit-scrollbar-thumb:hover {
-//     background: #ff834f;
-//   }
 }
 
 @media (max-width: 1290px) {
